Replicated original barttender LR model to get metrics

--- a/extensions.ipynb
+++ b/extensions.ipynb
@@ -202,6 +202,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Replicating original paper's logistic regression method to get model metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.622207\n",
+      "         Iterations 11\n",
+      "AUC: 0.7190507663739653\n",
+      "F1 Score: 0.5647840531561462\n",
+      "Confusion Matrix:\n",
+      "[[485 138]\n",
+      " [255 255]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Copying LR model from barttender/notebooks/mimic-lr-no-idp.ipynb\n",
+    "# 4. Logistic Regression using Statsmodels\n",
+    "logit_model = sm.Logit(Y_train, X_train_encoded)\n",
+    "result = logit_model.fit()\n",
+    "\n",
+    "# Predictions and evaluations\n",
+    "Y_test_pred_prob = result.predict(X_test_encoded)\n",
+    "Y_test_pred = (Y_test_pred_prob > 0.5).astype(int)\n",
+    "\n",
+    "auc_score = roc_auc_score(Y_test, Y_test_pred_prob)\n",
+    "f1 = f1_score(Y_test, Y_test_pred)\n",
+    "conf_matrix = confusion_matrix(Y_test, Y_test_pred)\n",
+    "\n",
+    "# Output\n",
+    "print(f'AUC: {auc_score}', f'F1 Score: {f1}', f'Confusion Matrix:\\n{conf_matrix}', sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "EXTENSION: LASSO Regression as alternate variable selection method"
    ]
   },
